--- a/src/.umi/tsconfig.json
+++ b/src/.umi/tsconfig.json
@@ -27,7 +27,7 @@
         "src/.umi/*"
       ],
       "umi": [
-        "../../node_modules/.pnpm/umi@4.4.11_enk4ejw6n42i3d5rmg7vwyr6le/node_modules/umi"
+        "../../node_modules/umi"
       ],
       "umi/typings": [
         "src/.umi/typings"
