--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "@umijs/lint": "^4.4.11",
     "@umijs/plugins": "^4.4.11",
     "cross-env": "^7.0.3",
-    "eslint": "^9.27.0",
+    "eslint": "8.57.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "postcss-less": "^6.0.0",
     "stylelint": "^14.16.1",
     "stylelint-config-standard-less": "^3.0.1",
     "stylelint-less": "^3.0.1",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "umi-plugin-keep-alive": "0.0.1-beta.35"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css,less,scss}": [
