--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "private": true,
   "author": "yanjinqiang <yanjinqiang@zofund.com>",
   "scripts": {
-    "dev": "umi dev",
+    "dev": "max dev",
     "start:localtest": "cross-env UMI_ENV=localtest umi dev",
-    "build": "umi build",
+    "build": "max build",
     "postinstall": "umi setup",
-    "setup": "umi setup",
+    "setup": "max setup",
     "start": "npm run dev",
-    "lint": "umi lint",
+    "lint": "max lint",
     "prepare": "husky"
   },
   "dependencies": {
-    "antd": "^5.25.3",
-    "umi": "^4.4.11"
+    "antd": "^5.25.3"
   },
   "devDependencies": {
     "@ant-design/icons": "^6.0.0",
@@ -22,6 +21,7 @@
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "@umijs/lint": "^4.4.11",
+    "@umijs/max": "^4.4.11",
     "@umijs/plugins": "^4.4.11",
     "cross-env": "^7.0.3",
     "eslint": "8.57.1",
@@ -36,7 +36,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css,less,scss}": [
-      "umi lint"
+      "max lint"
     ]
   }
 }
