--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "antd": "^5.25.3"
+    "ahooks": "^3.8.5",
+    "antd": "^5.25.3",
+    "axios": "^1.9.0",
+    "es-toolkit": "^1.38.0",
+    "uuid": "^11.1.0",
+    "react-awesome-all-component": "0.0.10"
   },
   "devDependencies": {
     "@ant-design/icons": "^6.0.0",
