feat: 根据启动环境设置环境变量

--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "author": "yanjinqiang <yanjinqiang@zofund.com>",
   "scripts": {
     "dev": "max dev",
-    "start:localtest": "cross-env UMI_ENV=localtest umi dev",
+    "start:dev": "cross-env UMI_ENV=dev max dev",
+    "start:test": "cross-env UMI_ENV=test max dev",
+    "start:sit": "cross-env UMI_ENV=sit max dev",
+    "start:pre": "cross-env UMI_ENV=pre max dev",
+    "start:prd": "cross-env UMI_ENV=prd max dev",
+    "build:dev": "cross-env UMI_ENV=dev max build",
+    "build:test": "cross-env UMI_ENV=test max build",
+    "build:sit": "cross-env UMI_ENV=sit max build",
+    "build:pre": "cross-env UMI_ENV=pre max build",
+    "build:prd": "cross-env UMI_ENV=prd max build",
     "build": "max build",
     "postinstall": "max setup",
     "setup": "max setup",
