--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.8",
+    "echarts": "^5.6.0",
     "es-toolkit": "^1.38.0",
     "fast-equals": "^5.2.2",
+    "html2canvas": "^1.4.1",
     "localforage": "^1.10.0",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "omit.js": "^2.0.2",
+    "p-limit": "^6.2.0",
     "path-to-regexp": "^6.2.1",
+    "query-string": "^9.2.2",
     "react-dnd": "^14.0.5",
     "react-helmet-async": "^1.0.4",
     "react-is": "^19.0.0",
