--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,16 +4,16 @@
     "baseUrl": "./",
     "paths": {
       "@/*": [
-        "src/*"
+        "./src/*"
       ],
       "@@/*": [
-        "src/.umi/*"
+        "./src/.umi/*"
       ],
       "@umijs/max": [
         "./node_modules/umi"
       ],
       "@umijs/max/typings": [
-        "src/.umi/typings"
+        "./src/.umi/typings"
       ],
       "@page/*": ["./src/pages/*"],
       "@services/*":["./src/api/*"],
