--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "postcss-less": "^6.0.0",
+    "prettier": "^3.6.2",
     "stylelint": "^14.16.1",
     "stylelint-config-standard-less": "^3.0.1",
     "stylelint-less": "^3.0.1",
