--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         "./src/.umi/typings"
       ],
       "@page/*": ["./src/pages/*"],
-      "@services/*":["./src/api/*"],
+      "@services/*":["./src/services/*"],
       "@assets/*": ["./src/assets/*"],
       "@business/*": ["./src/business/*"],
       "@components/*": ["./src/components/*"],
