--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "es-toolkit": "^1.38.0",
     "fast-equals": "^5.2.2",
     "html2canvas": "^1.4.1",
+    "jsencrypt": "^3.5.4",
     "localforage": "^1.10.0",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
